[package]
name = "rust-hdf5"
description = "Pure Rust HDF5 library with full read/write and SWMR support"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Sang Woo Kim"]
repository = "https://github.com/physwkim/rust-hdf5"

[dependencies]
flate2 = { version = "1", optional = true }
lz4_flex = { version = "0.11", optional = true }
bzip2 = { version = "0.5", optional = true }
rust-zstd = { version = "0.1", default-features = false, optional = true }
snap = { version = "1", optional = true }
rayon = { version = "1", optional = true }
memmap2 = { version = "0.9", optional = true }

[features]
default = ["deflate"]
deflate = ["flate2"]
lz4 = ["lz4_flex"]
bzip2 = ["dep:bzip2"]
blosc = ["lz4_flex", "dep:snap"]
zstd = ["rust-zstd"]
all_filters = ["deflate", "lz4", "bzip2", "blosc", "zstd"]
parallel = ["rayon", "deflate"]
mmap = ["memmap2"]
threadsafe = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "io_bench"
harness = false
