[package]
name = "hdf5-format"
description = "Pure Rust HDF5 on-disk format codec (encode/decode, no I/O)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
flate2 = { version = "1", optional = true }
lz4_flex = { version = "0.11", optional = true }
# zstd: fully self-contained (compress + decompress), no external crate
bzip2 = { version = "0.5", optional = true }
rayon = { version = "1", optional = true }

[features]
default = ["deflate"]
deflate = ["flate2"]
lz4 = ["lz4_flex"]
## Pure Rust zstd compressor + decompressor. Zero external C dependencies.
zstandard = []
bzip2_filter = ["bzip2"]
blosc = ["lz4_flex"]
all_filters = ["deflate", "lz4", "zstandard", "bzip2_filter", "blosc"]
all_filters_full = ["deflate", "lz4", "zstandard", "bzip2_filter", "blosc"]
parallel = ["rayon"]
